--- a/src/app/extensions/quoting/shared/quote/quote-edit/quote-edit.component.html
+++ b/src/app/extensions/quoting/shared/quote/quote-edit/quote-edit.component.html
@@ -151,14 +151,18 @@
     </div>
   </div>
 
-  <!-- TODO: SubmittedToSeller date is missing in api. Please implement when available.
-  <isif condition="#(Quote:State==3) AND (LinkSource NE "Shopping")#">
-    <div class="alert alert-info"><istext key="quote.edit.submitted.your_quote_has_been_submitted.text" parameter0="#getValue(Quote:ProductListEventByType("SubmittedToSeller"):EventDate, DATE_INPUT)#" /></div>
-    <iselseif condition="#isDefined(ERRORCODE_QUOTEVALIDATION)#">
-    <div class="alert alert-info">
-      <istext key="#ERRORCODE_QUOTEVALIDATION#"/>
-    </div>
-  </isif> -->
+  <div *ngIf="quote.state === 'Submitted'" data-testing-id="success-message" class="alert alert-info">
+    {{
+      'quote.edit.submitted.your_quote_has_been_submitted.text'
+        | translate: { '0': quote.submittedDate | date: 'shortDate' }
+    }}
+  </div>
+
+  <div *ngIf="displaySavedMessage$ | async" data-testing-id="success-message" class="alert alert-success alert-fade">
+    {{ 'quote.edit.saved.your_quote_has_been_saved.text' | translate }}
+  </div>
+
+  <div *ngIf="error" role="alert" class="alert alert-danger">{{ error.status }}: {{ error.error }}</div>
 
   <!-- Quote Item List -->
   <div class="section">
