feat: delete user payments in MyAccount and checkout

--- a/src/app/pages/account-payment/account-payment-page.component.html
+++ b/src/app/pages/account-payment/account-payment-page.component.html
@@ -1,6 +1,11 @@
 <div class="clearfix">
   <ng-container>
-    <ish-account-payment [paymentMethods]="paymentMethods$ | async" [error]="error$ | async"> </ish-account-payment>
+    <ish-account-payment
+      [paymentMethods]="paymentMethods$ | async"
+      [error]="error$ | async"
+      (deletePaymentInstrument)="deletePaymentInstrument($event)"
+    >
+    </ish-account-payment>
   </ng-container>
 
   <ish-loading *ngIf="loading$ | async"></ish-loading>
