--- a/src/app/pages/account-payment/account-payment/account-payment.component.html
+++ b/src/app/pages/account-payment/account-payment/account-payment.component.html
@@ -8,10 +8,21 @@
   <!--<h3>{{ 'account.payment.preferred_method' | translate }}</h3>-->
 
   <div *ngFor="let method of paymentMethods" class="section" data-testing-id="paymentMethodList">
-    <h5>{{ method.displayName }}</h5>
-    <ng-container *ngFor="let payment of method.paymentInstruments">
-      <p>{{ payment.accountIdentifier }}</p>
-    </ng-container>
+    <h5 class="section">{{ method.displayName }}</h5>
+    <div *ngFor="let payment of method.paymentInstruments" class="section row">
+      <div class="col-xs-11 col-sm-7 col-md-5">
+        <div class="float-right">
+          <a
+            class="btn-tool"
+            title="{{ 'checkout.payment.method.delete.link' | translate }}"
+            (click)="deleteUserPayment(payment.id)"
+          >
+            <fa-icon [icon]="['fas', 'trash-alt']"></fa-icon>
+          </a>
+        </div>
+        <p>{{ payment.accountIdentifier }}</p>
+      </div>
+    </div>
   </div>
 </ng-container>
 <ng-template #noPaymentMethods>
