feat: save concardis credit card for later

--- a/src/app/pages/checkout-payment/checkout-payment/checkout-payment.component.html
+++ b/src/app/pages/checkout-payment/checkout-payment/checkout-payment.component.html
@@ -74,7 +74,7 @@
           </li>
           <!-- Payment parameter form -->
           <div
-            *ngIf="paymentMethod.parameters"
+            *ngIf="paymentMethod.parameters && paymentMethod.parameters.length"
             class="section"
             [attr.data-testing-id]="'payment-parameter-form-' + paymentMethod.id"
           >
