--- a/src/app/pages/checkout-payment/payment-concardis-creditcard/payment-concardis-creditcard.component.html
+++ b/src/app/pages/checkout-payment/payment-concardis-creditcard/payment-concardis-creditcard.component.html
@@ -3,7 +3,7 @@
   {{ errorMessage.general.message | translate }}
 </p>
 
-<fieldset [formGroup]="parameterForm">
+<div [formGroup]="parameterForm">
   <!-- Credit card number -->
   <div class="row form-group" [ngClass]="{ 'has-error': errorMessage.cardNumber && errorMessage.cardNumber.message }">
     <label class="col-form-label col-md-4" for="cardpanInput"
@@ -50,9 +50,17 @@
       </a>
     </div>
   </div>
-</fieldset>
+</div>
 
 <div class="offset-md-4 col-md-8">
+  <ish-checkbox
+    *ngIf="paymentMethod && paymentMethod.saveAllowed"
+    [form]="parameterForm"
+    controlName="saveForLater"
+    label="checkout.save_edit.checkbox.label"
+    data-testing-id="save-for-later-input"
+  >
+  </ish-checkbox>
   <input
     type="button"
     (click)="submitNewPaymentInstrument()"
