feat: set preferred payment instrument at user

--- a/src/app/pages/account-payment/account-payment-page.component.html
+++ b/src/app/pages/account-payment/account-payment-page.component.html
@@ -2,8 +2,10 @@
   <ng-container>
     <ish-account-payment
       [paymentMethods]="paymentMethods$ | async"
+      [user]="user$ | async"
       [error]="error$ | async"
       (deletePaymentInstrument)="deletePaymentInstrument($event)"
+      (updateDefaultPaymentInstrument)="updateDefaultPaymentInstrument($event)"
     >
     </ish-account-payment>
   </ng-container>
