--- a/src/app/pages/checkout-payment/checkout-payment/checkout-payment.component.html
+++ b/src/app/pages/checkout-payment/checkout-payment/checkout-payment.component.html
@@ -140,8 +140,13 @@
       </ul>
       <!-- saveForLater checkbox - outlet template -->
       <ng-template #saveForLaterTemplate>
-        <ish-checkbox [form]="paymentForm" controlName="saveForLater" label="checkout.save_edit.checkbox.label">
-        </ish-checkbox>
+        <div class="form-group">
+          <ish-checkbox
+            [form]="paymentForm"
+            controlName="saveForLater"
+            label="checkout.save_edit.checkbox.label"
+          ></ish-checkbox>
+        </div>
       </ng-template>
     </form>
   </div>
