--- a/src/app/pages/checkout-payment/checkout-payment/checkout-payment.component.html
+++ b/src/app/pages/checkout-payment/checkout-payment/checkout-payment.component.html
@@ -21,125 +21,125 @@
 
     <!-- display all payment methods -->
     <form [formGroup]="paymentForm" class="form-horizontal" (ngSubmit)="submitParameterForm()">
-      <ul *ngIf="hasPaymentMethods" id="payment-accordion" class="list-unstyled ml-4">
+      <ul *ngIf="hasPaymentMethods" id="payment-accordion" class="list-unstyled">
         <ng-container *ngFor="let paymentMethod of filteredPaymentMethods; index as i">
           <li class="panel">
             <div [ngClass]="{ 'form-check': !paymentMethod.parameters }" role="tab">
-              <!-- display radio buttons only for payment methods without parameters -->
-              <input
-                *ngIf="!paymentMethod.parameters"
-                class="form-check-input"
-                type="radio"
-                formControlName="name"
-                [id]="'paymentOption_' + paymentMethod.id"
-                [value]="paymentMethod.id"
-                [attr.disabled]="paymentMethod.isRestricted ? true : null"
-              />
-              <label class="form-check-label" [for]="'paymentOption_' + paymentMethod.id">
-                <strong>
-                  {{ paymentMethod.displayName }}
-                  <ng-container *ngIf="!paymentMethod.displayName">{{ paymentMethod.id }}</ng-container>
-                </strong>
-                <p *ngIf="paymentMethod.description">{{ paymentMethod.description }}</p>
-                <p *ngIf="paymentCostThresholdReached(paymentMethod); else displayPaymentCosts">
-                  {{ 'checkout.payment.payment_cost_threshold.amount_reached' | translate }}
-                  &nbsp;
-                  {{ basket.totals.total | ishPrice }}
-                </p>
-                <ng-template #displayPaymentCosts>
-                  <div *ngIf="!paymentMethod.isRestricted; else displayRestrictions">
-                    <p *ngIf="paymentMethod.paymentCosts && paymentMethod.paymentCosts.value">
-                      {{ 'checkout.payment.method.charges.text' | translate }}&nbsp;{{
-                        paymentMethod.paymentCosts | ishPrice
-                      }}&nbsp;
-                      <span *ngIf="paymentMethod.paymentCostsThreshold" class="text-muted">
-                        <span class="hidden-xs">-&nbsp;</span
-                        >{{ 'checkout.payment.payment_cost_threshold.text' | translate }}
-                        <span class="text-nowrap">{{ paymentMethod.paymentCostsThreshold | ishPrice }}</span>
-                      </span>
-                    </p>
-                  </div>
-                </ng-template>
-                <ng-template #displayRestrictions>
-                  {{ 'checkout.payment.method.charges.text' | translate }}
-                  &nbsp;
-                  {{ paymentMethod.paymentCosts | ishPrice }}
-                  &nbsp;
-                  <p *ngFor="let restriction of paymentMethod.restrictionCauses" class="text-info">
-                    {{ restriction.message }}
+              <strong>
+                {{ paymentMethod.displayName }}
+                <ng-container *ngIf="!paymentMethod.displayName">{{ paymentMethod.id }}</ng-container>
+              </strong>
+              <p *ngIf="paymentMethod.description">{{ paymentMethod.description }}</p>
+              <p *ngIf="paymentCostThresholdReached(paymentMethod); else displayPaymentCosts">
+                {{ 'checkout.payment.payment_cost_threshold.amount_reached' | translate }}
+                &nbsp;
+                {{ basket.totals.total | ishPrice }}
+              </p>
+              <ng-template #displayPaymentCosts>
+                <div *ngIf="!paymentMethod.isRestricted; else displayRestrictions">
+                  <p *ngIf="paymentMethod.paymentCosts && paymentMethod.paymentCosts.value">
+                    {{ 'checkout.payment.method.charges.text' | translate }}&nbsp;{{
+                      paymentMethod.paymentCosts | ishPrice
+                    }}&nbsp;
+                    <span *ngIf="paymentMethod.paymentCostsThreshold" class="text-muted">
+                      <span class="hidden-xs">-&nbsp;</span
+                      >{{ 'checkout.payment.payment_cost_threshold.text' | translate }}
+                      <span class="text-nowrap">{{ paymentMethod.paymentCostsThreshold | ishPrice }}</span>
+                    </span>
                   </p>
-                </ng-template>
-              </label>
-            </div>
-          </li>
-          <!-- Payment parameter form -->
-          <div
-            *ngIf="paymentMethod.parameters && paymentMethod.parameters.length"
-            class="section"
-            [attr.data-testing-id]="'payment-parameter-form-' + paymentMethod.id"
-          >
-            <li *ngFor="let paymentInstrument of paymentMethod.paymentInstruments" class="panel">
-              <div class="form-check col-xl-4 col-md-5 col-sm-6 col-8" role="tab">
+                </div>
+              </ng-template>
+              <ng-template #displayRestrictions>
+                {{ 'checkout.payment.method.charges.text' | translate }}
+                &nbsp;
+                {{ paymentMethod.paymentCosts | ishPrice }}
+                &nbsp;
+                <p *ngFor="let restriction of paymentMethod.restrictionCauses" class="text-info">
+                  {{ restriction.message }}
+                </p>
+              </ng-template>
+              <!-- display radio buttons only for payment methods without parameters -->
+              <ng-container *ngIf="!paymentMethod.parameters && !paymentMethod.isRestricted">
                 <input
-                  class="form-check-input"
                   type="radio"
                   formControlName="name"
-                  [id]="'paymentOption_' + paymentInstrument.id"
-                  [value]="paymentInstrument.id"
+                  [id]="'paymentOption_' + paymentMethod.id"
+                  [value]="paymentMethod.id"
                 />
-                <label class="form-check-label " [for]="'paymentOption_' + paymentInstrument.id">
-                  {{ paymentInstrument.accountIdentifier }}
+                <label class="form-check-label" [for]="'paymentOption_' + paymentMethod.id">
+                  {{ 'checkout.payment.payWith.link' | translate: { '0': paymentMethod.displayName } }}
                 </label>
-                <a
-                  class="float-right"
-                  (click)="deleteBasketPayment(paymentInstrument)"
-                  data-testing-id="delete-payment-link"
-                  >{{ 'checkout.payment.method.delete.link' | translate }}</a
-                >
-              </div>
-            </li>
-
-            <p>
-              <a *ngIf="!formIsOpen(i)" (click)="openPaymentParameterForm(i)" data-testing-id="add-payment-link"
-                >{{ 'checkout.payment.addPayment.link' | translate }}
-              </a>
-            </p>
-
-            <div [ngbCollapse]="!formIsOpen(i)">
-              <p class="indicates-required">
-                <span class="required">*</span>{{ 'account.required_field.message' | translate }}
-              </p>
-              <ng-container *ngIf="paymentMethod.serviceId !== 'Concardis_CreditCard'; else ConcardisCreditCard">
-                <formly-form
-                  [form]="parameterForm"
-                  [options]="options"
-                  [model]="model"
-                  [fields]="paymentMethod.parameters"
-                >
-                  <div class="offset-md-4 col-md-8">
-                    <ng-container *ngIf="paymentMethod.saveAllowed">
-                      <ng-container *ngTemplateOutlet="saveForLaterTemplate"></ng-container>
-                    </ng-container>
-                    <button type="submit" class="btn btn-primary" [disabled]="submitDisabled">
-                      {{ 'checkout.account.submit.button.label' | translate }}
-                    </button>
-                    <button type="button" class="btn btn-secondary" (click)="cancelNewPaymentInstrument()">
-                      {{ 'checkout.cancel.button.label' | translate }}
-                    </button>
-                  </div>
-                </formly-form>
               </ng-container>
-              <ng-template #ConcardisCreditCard>
-                <ish-payment-concardis-creditcard
-                  [paymentMethod]="paymentMethod"
-                  [activated]="formIsOpen(i)"
-                  (submit)="createNewPaymentInstrument($event)"
-                  (cancel)="cancelNewPaymentInstrument()"
-                ></ish-payment-concardis-creditcard>
-              </ng-template>
             </div>
-          </div>
-        </ng-container>
+            <!-- Payment parameter form -->
+            <div
+              *ngIf="paymentMethod.parameters && paymentMethod.parameters.length"
+              [attr.data-testing-id]="'payment-parameter-form-' + paymentMethod.id"
+            >
+              <li *ngFor="let paymentInstrument of paymentMethod.paymentInstruments" class="panel section">
+                <div class="form-check col-xl-4 col-md-5 col-sm-6 col-8" role="tab">
+                  <input
+                    type="radio"
+                    formControlName="name"
+                    [id]="'paymentOption_' + paymentInstrument.id"
+                    [value]="paymentInstrument.id"
+                  />
+                  <label class="form-check-label " [for]="'paymentOption_' + paymentInstrument.id">
+                    {{ paymentInstrument.accountIdentifier }}
+                  </label>
+                  <!-- ToDo: enable this link if pwa runs against ICM 7.10.16+ -->
+                  <!--<a
+                    class="float-right"
+                    (click)="deleteBasketPayment(paymentInstrument)"
+                    data-testing-id="delete-payment-link"
+                    >{{ 'checkout.payment.method.delete.link' | translate }}</a
+                  >-->
+                </div>
+              </li>
+
+              <li class="panel">
+                <a *ngIf="!formIsOpen(i)" (click)="openPaymentParameterForm(i)" data-testing-id="add-payment-link"
+                  >{{ 'checkout.payment.addPayment.link' | translate }}
+                </a>
+              </li>
+
+              <div [ngbCollapse]="!formIsOpen(i)">
+                <p class="indicates-required">
+                  <span class="required">*</span>{{ 'account.required_field.message' | translate }}
+                </p>
+                <ng-container *ngIf="paymentMethod.serviceId !== 'Concardis_CreditCard'; else ConcardisCreditCard">
+                  <formly-form
+                    [form]="parameterForm"
+                    [options]="options"
+                    [model]="model"
+                    [fields]="paymentMethod.parameters"
+                  >
+                    <div class="offset-md-4 col-md-8">
+                      <ng-container *ngIf="paymentMethod.saveAllowed">
+                        <ng-container *ngTemplateOutlet="saveForLaterTemplate"></ng-container>
+                      </ng-container>
+                      <div class="form-group">
+                        <button type="submit" class="btn btn-primary" [disabled]="submitDisabled">
+                          {{ 'checkout.account.submit.button.label' | translate }}
+                        </button>
+                        <button type="button" class="btn btn-secondary" (click)="cancelNewPaymentInstrument()">
+                          {{ 'checkout.cancel.button.label' | translate }}
+                        </button>
+                      </div>
+                    </div>
+                  </formly-form>
+                </ng-container>
+                <ng-template #ConcardisCreditCard>
+                  <ish-payment-concardis-creditcard
+                    [paymentMethod]="paymentMethod"
+                    [activated]="formIsOpen(i)"
+                    (submit)="createNewPaymentInstrument($event)"
+                    (cancel)="cancelNewPaymentInstrument()"
+                  ></ish-payment-concardis-creditcard>
+                </ng-template>
+              </div>
+            </div></li
+        ></ng-container>
       </ul>
       <!-- saveForLater checkbox - outlet template -->
       <ng-template #saveForLaterTemplate>
