feat: refactor the payment functionality after review

--- a/src/app/pages/checkout-payment/checkout-payment-page.component.html
+++ b/src/app/pages/checkout-payment/checkout-payment-page.component.html
@@ -6,8 +6,7 @@
     [paymentMethods]="paymentMethods$ | async"
     [error]="basketError$ | async"
     (updatePaymentMethod)="updateBasketPaymentMethod($event)"
-    (createBasketPaymentInstrument)="createBasketPaymentInstrument($event)"
-    (createUserPaymentInstrument)="createUserPaymentInstrument($event)"
+    (createPaymentInstrument)="createPaymentInstrument($event)"
     (deletePaymentInstrument)="deletePaymentInstrument($event)"
     (nextStep)="nextStep()"
   ></ish-checkout-payment>
